definition of assemblies

--- a/latex/types2025/types2025.tex
+++ b/latex/types2025/types2025.tex
@@ -272,6 +272,10 @@ have been realized before.
 %
 Towards this goal, we now suggest two assemblies of interest: that of
 pure natural numbers and that of effectful natural numbers.
+%
+In these definitions, \(-\cdot_{w}-\) is the pca application which is now
+indexed by worlds \(w\), and \(-|_{w}\) is used for the transition maps
+of our presheaves.
 
 \begin{defn}
   The \definiendum{pure natural numbers assembly}, denoted
